src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinemaabyss-ingress
  namespace: cinemaabyss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cinemaabyss.example.com
    http:
      paths:
      - path: /api/movies
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port:
              number: 80
      - path: /api/events
        pathType: Prefix
        backend:
          service:
            name: events-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 80
